force-app/main/default/objects/Medical_Appointment__c/fields/First_Appointment__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Appointment Internist</label>
    <type>Checkbox</type>
</CustomField>