force-app/main/default/objects/Medical_Appointment__c/fields/Medical_Appointment_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Appointment_Name__c</fullName>
    <label>Medical Appointment Name</label>
    <type>TextArea</type>
</CustomField>