force-app/main/default/objects/Medical_Appointment__c/fields/Medical_Insurence__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Insurence</label>
    <referenceTo>Medical_Insurence__c</referenceTo>
    <relationshipLabel>Medical Appointments</relationshipLabel>
    <relationshipName>Medical_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>