force-app/main/default/objects/Medical_Appointment__c/validationRules/Doctor_RecordType_Filter.validationRule-meta.xml
<ValidationRule>
    <fullName>Doctor_RecordType_Filter</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISBLANK(Doctor__c)),
   Doctor__r.RecordType.Name &lt;&gt; &quot;Doctor&quot;
)</errorConditionFormula>
    <errorDisplayField>Doctor__c</errorDisplayField>
    <errorMessage>Wybierz lekarza z record type &apos;Doctor&apos;</errorMessage>
</ValidationRule>