force-app/main/default/objects/Medical_Appointment__c/validationRules/First_Appointment_On_Site.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Appointment_On_Site</fullName>
    <active>true</active>
    <errorConditionFormula>AND( First_Appointment__c = TRUE,   $RecordType.Name = &quot;Online&quot;)</errorConditionFormula>
    <errorMessage>First Appointment must be on site.</errorMessage>
</ValidationRule>