force-app/main/default/objects/Medical_Appointment__c/validationRules/Insurence_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurence_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISNULL(Patient__r.Medical_Insurence__c),
ISNULL(Patient__r.Medical_Insurence__r.End_Date_of_Insurance__c),
AND( Medical_Facility__r.Insurence_Required__c = True,  
Patient__r.Medical_Insurence__r.End_Date_of_Insurance__c &lt; 
TODAY()
)
)</errorConditionFormula>
    <errorMessage>The patient does not have insurance.</errorMessage>
</ValidationRule>