force-app/main/default/objects/Medical_Appointment__c/validationRules/Patient_RecordType_Filter.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_RecordType_Filter</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Patient__c)),
    Patient__r.RecordType.Name &lt;&gt; &quot;Patient&quot; 
)</errorConditionFormula>
    <errorDisplayField>Patient__c</errorDisplayField>
    <errorMessage>Wybierz pacjenta z record type &apos;Patient&apos;</errorMessage>
</ValidationRule>