force-app/main/default/objects/Medical_Appointment__c/validationRules/Required_insurence.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_insurence</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() &gt;  Medical_Insurence__r.End_Date_of_Insurance__c</errorConditionFormula>
    <errorMessage>The patient&apos;s insurance has expired.</errorMessage>
</ValidationRule>